@@ -1,3 +1,4 @@
+	* support loading version 2 of resume data format
 	* fix issue with odd piece sizes
 	* add async piece availability query, post_piece_availability()
 	* add async download queue query, post_download_queue()
